# gemini-file-search-demo

./: .env.template  .envrc  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml
app/: agent.py  fast_api_app.py  sdk_agent.py  sdk_rag_agent.py
app/app_utils/: typing.py
app/basic_agent_adk/: agent.py
app/rag_agent_adk/: agent.py  tools_custom.py
notebooks/: file_search_store.ipynb
